--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -5,7 +5,7 @@ on:
     branches: ['main']
   workflow_dispatch:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: "*/5 * * * *"
   issues:
     types: [opened, closed]
 
